--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,6 +4,11 @@ spring:
   batch:
     jdbc:
       initialize-schema: always
+  # 스프링 콘솔 로그 색상
+  output:
+    ansi:
+      enabled: always
+
   main:
     allow-bean-definition-overriding: true
   datasource:
